--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   jovial_svg: ^1.1.20
   google_fonts: ^6.1.0
   font_awesome_flutter: ^10.7.0
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
