Complete project (CRUD) - Firebase Auth (Sign in with Google and Sign in as guest) - Firebase firestore CRUD operations - Removed isar db - Removed bloc

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,18 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>GIDClientID</key>
+	<string>398101876266-8n8voqika1gium55m2huh25a9d2r6goe.apps.googleusercontent.com</string>
+	<key>CFBundleURLTypes</key>
+<array>
+	<dict>
+		<key>CFBundleTypeRole</key>
+		<string>Editor</string>
+		<key>CFBundleURLSchemes</key>
+		<array>
+			<string>com.googleusercontent.apps.398101876266-8n8voqika1gium55m2huh25a9d2r6goe</string>
+		</array>
+	</dict>
+</array>
 </dict>
 </plist>
