--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,15 +35,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  isar: ^3.1.0+1
-  isar_flutter_libs: ^3.1.0+1
-  flutter_bloc: ^8.1.3
   intl: ^0.19.0
   flutter_animate: ^4.5.0
   jovial_svg: ^1.1.20
   google_fonts: ^6.1.0
   font_awesome_flutter: ^10.7.0
   path_provider: ^2.1.2
+  firebase_core: ^2.25.4
+  cloud_firestore: ^4.15.4
+  firebase_auth: ^4.17.4
+  google_sign_in: ^6.2.1
+  provider: ^6.1.1
+  animated_line_through: ^1.0.4
+  fluttertoast: ^8.2.4
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -56,7 +61,6 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   build_runner: any
-  isar_generator: ^3.1.0+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
