--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   animated_line_through: ^1.0.4
   fluttertoast: ^8.2.4
   shared_preferences: ^2.2.2
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   flutter_test:
