--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   fluttertoast: ^8.2.4
   shared_preferences: ^2.2.2
   flutter_staggered_grid_view: ^0.7.0
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
