--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   shared_preferences: ^2.2.2
   flutter_staggered_grid_view: ^0.7.0
   collection: ^1.18.0
+  quick_actions: ^1.0.7
 
 dev_dependencies:
   flutter_test:
